@@ -1,0 +1,17 @@
+Callback application
+--------------------
+
+This application FRs the caller with 468 Busy, and calls back 
+after some time. If the callback call is established, the called 
+party may enter a number, to which the call is connected in B2BUA 
+mode with media relay.
+
+Both the callback call to the caller, and the outgoing call 
+to the callee) are made and authenticated using a configurable
+account (From, domain and authentication).
+
+Allowed callback users may be specified with a regexp in the
+configuration.
+
+Used together with reg-agent this app can greatly reduce your
+mobile phone bill...
